--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/brasil_burger?serverVersion=mariadb-1
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=nabou
+JWT_PASSPHRASE=cas
 ###< lexik/jwt-authentication-bundle ###
 
 ###> nelmio/cors-bundle ###
