--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,7 @@
         "symfony/twig-bundle": "6.1.*",
         "symfony/validator": "6.1.*",
         "symfony/yaml": "6.1.*",
-        "symfonycasts/verify-email-bundle": "^1.10",
-        "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "symfony/maker-bundle": "^1.45"
+        "symfonycasts/verify-email-bundle": "^1.10"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
