--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -3,5 +3,10 @@ api_platform:
         paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
         json: ['application/merge-patch+json']
+        mime_types: ['multipart/form-data']
     swagger:
         versions: [3]
+        api_keys:
+          apikey:
+            name: Authorization
+            type: header
