--- a/.env
+++ b/.env
@@ -34,3 +34,9 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 MAILER_DSN=smtp://2982e445a24ddd:da68880c8bdc49@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
 
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=4a5b0623611202522a1f28cdf00175ab
+###< lexik/jwt-authentication-bundle ###
