--- a/.env
+++ b/.env
@@ -23,7 +23,8 @@ APP_SECRET=c1070f931ab2e44ce6632bdc28ce5c28
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/brasil_burger?serverVersion=mariadb-10.4.1&charset=utf8mb4"
+#DATABASE_URL="mysql://root:@127.0.0.1:3306/brasil_burger?serverVersion=mariadb-10.4.1&charset=utf8mb4"
+DATABASE_URL="postgresql://cas:cas@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
