--- a/config/services.yaml
+++ b/config/services.yaml
@@ -23,6 +23,7 @@ services:
     App\EventSubscriber\UserSubscriber:
         tags:
             - { name: doctrine.event_listener, event: prePersist}
+            - { name: kernel.event_listener, event: lexik_jwt_authentication.on_authentication_success, method: getAuthUser}
 
 
     # add more service definitions when explicit configuration is needed
